--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.6.0",
+    "morgan": "^1.9.1"
   }
 }
