--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
