Updated users api

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js localhost 5000"
+    "start": "nodemon ./src/index.js localhost 5000",
+    "db:seed": "mongoimport --db course-api --collection courses --type=json --jsonArray --file seed-data/courses.json && mongoimport --db course-api --collection users --type=json --jsonArray --file seed-data/users.json && mongoimport --db course-api --collection reviews --type=json --jsonArray --file seed-data/reviews.json"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +17,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.6.0",
+    "mongoose": "^5.6.3",
     "morgan": "^1.9.1"
   }
 }
