--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon ./src/index.js localhost 5000",
+    "test": "node_modules/.bin/_mocha",
     "db:seed": "mongoimport --db course-api --collection courses --type=json --jsonArray --file seed-data/courses.json && mongoimport --db course-api --collection users --type=json --jsonArray --file seed-data/users.json && mongoimport --db course-api --collection reviews --type=json --jsonArray --file seed-data/reviews.json"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
     "nodemon": "^1.17.5"
   },
   "dependencies": {
